fix: 데이터베이스 클리너 로직 수정